[DOK-216] test : 상품 테스트 완료(리포지토리 제외)